# phase4

./: .cliffignore  .git-cliff-excluded-commits  .gitignore  CHANGELOG.md  Cargo.toml  Docker.sh  Dockerfile  KEYS  LICENSE  README.md  SECURITY.md  build.rs  cliff.toml  deny.toml  diagrams.md  example.config.yaml  minisign.pub
.cargo/: config.toml
.githooks/: commit-msg  pre-commit  pre-push
.github/workflows/: build.yml  old-release.yml  release.yml
docs/proposals/: stdout-events.md
docs/system/: lifecycle.md  midi.md  outputs.md
docs/tutorials/: blackhole.md  calibration.md  compile.md  nodejs.md  osc.md  python.md  touchdesigner.md  websockets.md  wrapper.md
scripts/: install.sh  release.sh
src/: app.rs  bootstrap.rs  config.rs  controller.rs  events.rs  lib.rs  main.rs  worker.rs
src/config/: mod.rs  resolve.rs  types.rs  validate.rs
src/dsp/: mod.rs  payload.rs  units.rs  vocoder.rs
src/managers/: analyser.rs  audio.rs  generator.rs  mapper.rs  midi.rs  mod.rs  osc.rs  recorder.rs  server.rs
tests/: app_calibration.rs  channel_selection.rs  client_server.rs  mapper_throttle.rs  osc_integration.rs  stdout_events.rs  version.rs
