[package]
name = "phase4"
license = "Apache-2.0"
version = "0.0.1-rc.2"
edition = "2021"
rust-version = "1.87"

[features]
default = ["display-bins-64"]
display-bins-32 = []
display-bins-64 = []
display-bins-128 = []
display-bins-256 = []

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
module_name_repetitions = "allow"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"

[dependencies]
anyhow = "1.0.102"
biquad = "0.6.0"
clap = { version = "4.6", features = ["derive"] }
cpal = "0.17"
futures-util = "0.3"
hound = "3.5.1"
no_denormals = "0.3.0"
ringbuf = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
thread-priority = "3.0.0"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "time"] }
tokio-tungstenite = "0.29"
log = "0.4"
env_logger = "0.11"
crossterm = { version = "0.29.0" }

[dev-dependencies]
testing_logger = "0.1.1"

[build-dependencies]
time = { version = "0.3", features = ["formatting"] }
